<resources>
    <string name="app_name">Hibernate</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="default_alarm">7:00AM</string>
    <string name="file_groggy_preferences">file_groggy_preferences</string>
    <string name="default_quote">Sit, walk or run, but don\'t wobble.</string>
    <string name="default_author">Sam Weuseim</string>
    <string name="default_title">Spring In Style</string>

    <string name="title_activity_alarm_receiver">AlarmReceiverActivity</string>
    <string name="dismiss">Dismiss</string>
    <string name="good_morning">Time to wake up!</string>
    <string name="title_activity_debug">Debug Land</string>
    <string name="notification_sleep_soon_content">One hour left to optimal bed time!</string>
    <string name="alarm_on">Alarm On</string>
    <string name="notification_sleep_soon_title">1 Hour Reminder</string>
    <string name="twenty_four_hour">24 Hour</string>
    <string name="clock_12hr">12 Hour (AM/PM)</string>
    <string name="alarm_off">Alarm Off</string>
    <string name="refresh">Refresh</string>
    <string name="intro">Introduction</string>
    <string name="upgrades">Upgrades</string>

    <string name="title_activity_introduction">IntroductionActivity</string>
    <string name="msg_not_avaliable">Feature Not Ready Yet</string>
    <string name="intro_title_cycles_wakeup">Alarms Interrupt Cycles</string>
    <string name="intro_content_cycles_wakeup">When you set an alarm clock to wake up, the alarm doesn\'t know when you get to bed and can interrupt your sleep causing grogginess and irritability in the morning.</string>
    <string name="intro_title_groggy">Feeling Groggy?</string>
    <string name="intro_content_groggy">We sleep in cycles of approximately 90 minutes, and when we wake up in the middle of a sleep cycle it can make us groggy in the morning.</string>
    <string name="intro_title_cycles_not_hours">Cycles NOT Hours</string>
    <string name="intro_content_cycles_not_hours">Researchers suggest that counting the number of full sleep cycles you get each night is a more valuable then the number of hours.</string>
    <string name="intro_title_hibernate">Welcome!</string>
    <string name="intro_content_hibernate">Hibernate is an alarm clock and ideal bed time calculator.\n\nJust set your morning alarm clock, get to bed on time and say goodbye to grogginess. </string>
    <string name="alarm">Alarm</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="enable_alarm">Enable Alarm</string>
    <string name="options">Options</string>
    <string name="clock_24hr">24 Hour Clock</string>
    <string name="clock_to_set">Click to set alarm.</string>
    <string name="options_description">Additional options you may want.</string>
    <string name="sku_upgrade_1_title">Upgrade Title 1</string>
    <string name="sku_upgrade_1_desc">Upgrade Description 1</string>
    <string name="sku_upgrade_1_owned">You own this pack.</string>
    <string name="download_now">Free Download</string>
    <string name="weekly_graph_no_data">No Data!</string>
    <string name="stop_tracking">Stop Tracking</string>
    <string name="toolbar_title_line_chart">Recent Entries</string>
    <string name="toolbar_title_entries_card">Your Sleep Log</string>
    <string name="sku_upgrade_2_title">Upgrade Title 2</string>
    <string name="sku_upgrade_2_desc">Upgrade Description 2</string>
</resources>
