<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_margin="@dimen/_16"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_8"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_4"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.75"
                    android:text="@string/alarm"
                    android:textSize="@dimen/text_24"
                    android:textStyle="bold" />

                <Switch
                    android:id="@+id/frg_switch_alarm_on"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/clock_to_set" />
        </LinearLayout>

        <Button
            android:id="@+id/button_main_set_alarm"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/default_alarm"
            android:textColor="@color/material_blue_500"
            android:textSize="@dimen/text_20" />

    </LinearLayout>


    <!-- Options Section -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/_8"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:textSize="@dimen/text_24"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/options_description"/>
        </LinearLayout>

        <!-- 24 HR Clock -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_8"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.75"
                android:text="@string/clock_24hr"
                android:textSize="@dimen/text_18" />

            <Switch
                android:id="@+id/frg_switch_display_clock"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>